fix: adjust spacing of emojified squares to make perfect square instead of rectangle

--- a/assets/css/square.css
+++ b/assets/css/square.css
@@ -53,6 +53,8 @@
 
 #emojified {
   text-align: center;
+  display: inline-block;
+  line-height: calc(1em + 0.3rem);
 }
 
 #copy-emojified {
